--- a/src/views/admin/preview-dashboard.ejs
+++ b/src/views/admin/preview-dashboard.ejs
@@ -426,6 +426,20 @@
         </div>
       </div>
     </div>
+
+    <!-- Order Details Modal -->
+    <div id="order-details-modal" class="modal-overlay" style="display:none;">
+      <div class="modal-content">
+        <button class="close-modal" id="close-order-details-modal">&times;</button>
+        <div class="modal-header">
+          <h3>Order Details</h3>
+        </div>
+        <div class="modal-body" id="order-details-body">
+          <!-- Order details will be loaded here -->
+        </div>
+      </div>
+    </div>
+
     <script src="/js/admin-dashboard.js"></script>
 </body>
 </html> 
